Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68556

Last tab in TabBar not shown correctly with Fusion style

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.12.0 Alpha
    • 5.12
    • Quick: Controls 2
    • None
    • 500fbe43712f9a961efbca35c9f5b9cfdf0173a5

    Description

      5.11:

      dev:

      import QtQuick 2.0
      import QtQuick.Layouts 1.3
      import QtQuick.Controls 2.0
      
      ApplicationWindow {
          id: root
          width: 640
          height: 480
          title: "qtbug68556"
          visible: true
      
          TabBar {
              id: tabBar
      
              TabButton {
                  text: qsTr("Instances")
              }
              TabButton {
                  text: qsTr("Audio")
              }
          }
      
          StackLayout {
              currentIndex: tabBar.currentIndex
      
              Rectangle {}
              Rectangle {}
          }
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes